docs: add get all leads
