# handler/showLeads.go
@@ -7,6 +7,16 @@ import (
 	"github.com/joaogabsoaresf/go-stock-watcher/schemas"
 )
 
+// @BasePath /api/v1
+
+// @Summary Show leads
+// @Description Show all leads in database
+// @Tags Leads
+// @Accept json
+// @Produce json
+// @Success 200 {object} ShowLeadResponse
+// @Failures 500 {object} ErrorResponse
+// @Router /leads [get]
 func ShowLeadsHandler(ctx *gin.Context) {
 	lead := []schemas.Lead{}
 
